--- a/Changes
+++ b/Changes
@@ -1,304 +1,74 @@
-Revision history for Perl module DBIx::Easy.
+1.33:  Thu Jul 14 08:26:49 EDT 2005
+   - jettero fixed the MANIFEST to include the new tests
+     (not that they run at all without being on my devel
+     machine).
 
-* Sat Oct  8 01:24:40 2005 CEST
+1.32:  Wed Jul 13 14:11:35 EDT 2005
+   - jettero added a test for the selectall_arrayref() ::sth
+     problem
 
-DBIx::Easy v0.16 released
+1.31:  Wed Jul 13 14:10:34 EDT 2005
+   - jettero added error checking to the Easy AUTOLOAD to
+     prevent passing the AUTOLOADing Easy version of sth to
+     DBI. It checks for SvMAGICAL and Jet can fake it
+     without doing a proper @ISA=qw(DBI::st). The
+     disadvantage of that redesign ... is a redesign.
 
-* Thu Jan 13 17:57:29 2005 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): connect first before issue prepare statement
+1.30:  Wed May 25 17:12:15 EDT 2005
+   - jettero created a comprehensive test to cover the new
+     stupid bugs...
 
-* Sun Jan  9 13:34:45 2005 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): remove quotes from table names in tables method
-(dbs_dumptabstruct): put table names into quotes in system commands
+1.29:  Wed May 25 16:52:56 EDT 2005
+   - jettero fixed an AUTOLOAD bug in the new ::sth module.
+     Dumb.
 
-* Mon Jul  5 15:30:56 2004 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): don't call passwd method on Win32 machines
+1.28:  Wed May 25 15:41:17 EDT 2005
+   - jettero fixed a couple STUPID bugs in the tests.
 
-* Tue Feb 10 14:10:04 2004 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): return on connections errors from various methods to allow failover with custom error handler
-(Import.pm): new module
+1.27:  Wed May 25 15:17:48 EDT 2005
+   - jettero made the :sth returned by ready() a special
+     MySQL::Easy version that auto-reloads itself in the
+     case of the DBI connection fading and re-connecting.
+     This way you don't have to re-prepare the same
+     statements over and over -- by hand anyway.
 
-* Mon Feb  9 22:54:01 2004 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(dbs_update): new option --map-filter
-(Easy.pm): Sybase support fixed, allow empty database name for Sybase, avoid
-empty parentheses on some fatal errors
+1.26:  Fri Feb 11 07:25:31 EST 2005
+   - jettero added a check_warnings function
 
-* Wed Jan 21 18:15:03 2004 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(dbs_update): don't insert a column twice if used both in --map and --columns
+1.22:  Fri Oct  3 14:12:42 EDT 2003
+   - jettero made a minor change to the sub handle {} that
+     now pings the dbh to decide if it's still there.
 
-* Sat Oct  4 00:04:24 2003 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): rollback method added
+1.21:  Mon May 19 14:23:29 EDT 2003
+   - jettero added a better last_insert function
 
-* Wed Oct  1 13:08:46 2003 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): delete with empty conditions parameter fails, new methods
-describe_table, create_table
+1.2:  Tue Oct 29 09:13:58 EST 2002
+   - jettero added the johsr bind_execute function
 
-* Mon Jun 16 14:07:13 2003 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): explicit return added to cache method avoids malfunction if
-method columns is called first
+1.19:  Tue Oct 29 08:08:03 EST 2002
+   - jettero fixed some docs typos and added Josh's existing
+     handle support.
 
-* Tue May 13 14:40:21 2003 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): scalar references allow embedding strings without further quoting
-in the update method as well
+1.18:  Thu Oct  3 09:40:15 EDT 2002
+   - jettero fixed a really stupid syntax bug ...
 
-* Thu Mar 13 17:38:09 2003 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): fixed fallback in passwd method
+1.17:  Fri Aug 30 07:01:19 EDT 2002
+   - jettero fixed two very stupid bugs in the AUTOLOADer
+     ... lost my webserver at 5am due to one of them. :(
 
-* Wed Mar  5 18:15:09 2003 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): new method put
+1.16:  Wed Aug 28 17:04:27 EDT 2002
+   - jettero made a heafty change .... and introduced that
+     AUTOLOAD ... why didn't I think of that before!?!?
 
-* Sun Feb  2 11:28:27 2003 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): makemap now can be directed to put the whole record into the
-values of the resulting hash
+1.15:  Thu Jun  6 22:48:47 EDT 2002
+   - jettero did some things
 
-* Mon Dec 16 15:33:20 2002 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(scripts/dbs_update): allow input files in XLS format
+1.14:  Tue Jun  4 20:01:36 EDT 2002
+   - jettero fixed the test.t
 
-* Fri Apr 19 19:23:49 2002 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): new display method
-(scripts/dbs_dumptabstruct): --filter option added
+1.13:  Tue Jun  4 19:59:07 EDT 2002
+   - jettero made some distribution cleanups
 
-* Sat Mar 16 13:00:32 2002 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+1.12:  Tue Jun  4 19:57:17 EDT 2002
+   - jettero made a couple changes ...
 
-DBIx::Easy v0.15 released
-
-* Sun Feb 24 22:00:32 2002 -0500 David B. Bitton <david@codenoevil.com>
-(Easy.pm): support for Sybase and ODBC
-
-* Sat Dec  9 02:13:00 2001 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-
-DBIx::Easy v0.14 released
-
-* Sun Nov 18 14:09:59 2001 CET Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): implemented the optional map parameter in the random_row()
-method which was already documented
-
-* Thu Sep 20 17:20:50 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-
-DBIx::Easy v0.13 released
-
-* Thu Sep 20 17:19:19 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(scripts/dbs_update): --cleanse could fail if one of the keys is '0'
-
-* Wed Aug  8 00:15:25 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): don't use password from ~/.my.cnf for databases on other hosts
-(scripts/dbs_dumptabdata): dbs_printtab is emulated instead called as program
-
-* Tue Aug  7 23:50:54 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): new method is_auth_error
-
-* Tue Aug  7 22:20:36 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(scripts/dbs_update): --headline and --format=CSV weren't fully compatible
-
-* Mon Aug  6 12:16:17 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(scripts/dbs_printtab): new option --sort
-
-* Tue Jul 24 16:25:10 2001 CEST Dennis Schön <dennis@cobolt.net>
-(Easy.pm): database port is configurable now
-
-* Tue Jul 17 14:14:43 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-
-DBIx::Easy v0.12 released
-
-* Tue Jul 17 13:30:23 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): new method random_row
-
-* Tue Jul 17 11:51:08 2001 CEST Dennis Schön <dennis@cobolt.net>
-violation of Debian policy fixed (.packlist in binary package)
-
-* Fri Jun 29 11:10:34 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-
-DBIx::Easy v0.11 released
-
-* Sun Jun 24 23:54:34 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(Easy.pm): new method delete
-
-* Wed Mar 28 12:44:31 2001 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
-(scripts/dbs_update): new option --match-sql
-
-* Thu Mar 15 23:54:23 EST 2001 Dennis Schön <dennis@cobolt.net>
-(scripts/{dbs_dumptabdata,dbs_dumptabstruct,dbs_printtab}):
- Database handler warning fixed
-
-* Mon Feb 12 10:40:37 2001 CET Dennis Schön <dennis@cobolt.net>
-(scripts/dbs_update): Perl 5.6 warnings fixed
-
-* Sat Feb 10 01:10:29 2001 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): Perl warning fixed
-
-* Tue Feb  6 16:46:51 2001 CET Stefan Hornburg <racke@linuxia.de>
-
-DBIx::Easy v0.10 released
-
-* Thu Jan 25 10:18:43 2001 CET Dennis Schön <dennis@cobolt.net>
-(scripts/dbs_dumptabdata): pass user parameter to dbs_printtab
-
-* Mon Jan 15 23:20:43 2001 CET Stefan Hornburg <racke@linuxia.de>
-
-DBIx::Easy v0.09 released
-
-* Tue Dec 26 15:07:47 2000 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): insert an empty string, even if undef is given
-
-* Thu Nov  2 04:55:45 2000 CET Stefan Hornburg <racke@linuxia.de>
-(Easy.pm): escape tabulators in view method
-(scripts/dbs_update): expand tabulators, add columns explicitly
-selected to column list
-
-* Sun Oct  8 15:47:21 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): issue warning on missing type information
-
-* Thu Sep 28 14:07:50 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): return values of user-defined filters indicate 
-if record is valid
-
-* Sun Sep 24 20:21:23 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): apply user-defined filter routine only once
-
-* Mon Sep 18 17:32:56 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_dumptabdata, scripts/dbs_dumptabstruct): pass options
-first to mysqldump for compatibility with older versions
-
-* Sun Sep 17 13:10:37 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): make --columns to work with inclusions again
-
-* Fri Sep 15 18:32:35 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): new option --rows, option --keys accepts key names
-now, new functions key_names and prefix
-(Easy.pm): caches table structures now, new methods columns, types,
-sizes, typemap, sizemap, fold and info_proc
-
-* Tue Sep 12 10:38:22 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): now really choosed comma as default field separator 
-for CSV format
-
-* Fri Sep  8 21:58:04 2000 CEST Stefan Hornburg <racke@linuxia.de>
-
-DBIx::Easy v0.08 released
-
-* Fri Sep  8 21:56:59 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): strip whitespace from column names found
-in the headline
-
-* Thu Sep  7 17:04:24 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): comma is now the default field separator
-for CSV format, field separator can selected from the commandline
-
-* Tue Sep  5 15:14:28 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): brown paper bug fixed that kept --cleanse 
-from working by growing the SQL statement which each record to be cleansed
-
-* Sun Sep  3 20:37:41 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): bug fixed that may be trigged by the combination 
-of --headline and --map, assorted error messages improved, example
-for --routine added to documentation
-
-* Sun Sep  3 19:03:08 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): strip blanks from parameter list for --columns
-
-* Sun Sep  3 17:03:46 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): --columns can be used to exclude columns
-explicitly
-
-* Fri Sep  1 02:20:09 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): first field may contain table name and
-start column
-
-* Mon Aug 28 23:42:36 2000 CEST Stefan Hornburg <racke@linuxia.de>
-
-DBIx::Easy v0.07 released
-
-* Wed Jul 19 00:07:26 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(Easy.pm): documentation for is_table and tables added, new method
-sequences
-(scripts/dbs_dumptabstruct): dump sequences too
-
-* Mon Jul 17 12:55:53 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_dumptabstruct): new option --pipe
-
-* Sun Jul 16 16:24:49 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): --table and --columns are working together now,
-handle keys excessing the column size
-
-* Sun Jul 16 13:01:44 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): problems with --cleanse fixed
-
-* Tue Jul  4 16:18:32 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(Easy.pm:view, script/dbs_printtab, scripts/dbs_update): new option --columns
-(scripts/dbs_update): new option --cleanse
-
-* Sat Jul  1 12:34:28 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): handles special characters and multilines
-with CSV format now
-
-* Fri Jun 23 11:36:27 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): several new options
-
-* Mon May  8 02:29:47 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): remove carriage returns from input file
-
-* Sun May  7 16:47:59 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): renember table name if given explicitly
-
-* Sat Apr  1 15:39:16 2000 CEST Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_dumptabstruct, scripts/dbs_dumptabdata): new option --tables
-
-* Thu Mar 23 20:15:13 2000 CET Stefan Hornburg <racke@linuxia.de>
-(Easy.pm): better method to determine directory, force commit
-documented in POD
-(scripts/dbs_empty): ensure that all changes are commited
-
-* Thu Mar 23 16:05:33 2000 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): expand newlines
-(Easy.pm): escape newlines in view method
-
-* Wed Mar 22 16:16:22 2000 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_empty): new option --tables
-
-* Mon Mar 20 00:22:14 2000 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): more verbose error messages, ensure that
-all changes are committed
-
-* Sun Mar 19 11:20:25 2000 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_dumptab*): typo fixed
-(scripts/dbs_dumptabdata): new option --use-printtab
-
-* Sat Mar 18 23:15:22 2000 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_printtab): new script
-(Easy.pm): added option separator to view method
-
-* Tue Feb 29 19:33:13 2000 CET Stefan Hornburg <racke@linuxia.de>
-(Easy.pm): made more verbose if connection cannot be established
-method view fixed in respect to limit option
-             
-* Fri Jan 21 10:59:03 2000 CET Stefan Hornburg <racke@linuxia.de>
-(Easy.pm): optional parameter CONDITION added to method makemap
-
-* Thu Jan 20 12:56:10 2000 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_empty, scripts/dbs_dumptabstruct, scripts/dumptabdata):
-new option --exclude-matching-tables
-
-* Sat Jan 15 15:24:30 2000 CET Stefan Hornburg <racke@linuxia.de>
-(Easy.pm): don't call rollback within error handler 
-if AutoCommit is enabled
-
-* Sun Jan  2 17:48:46 2000 CET Stefan Hornburg <racke@linuxia.de>
-
-(Easy.pm): new method is_table
-(scripts/dbs_update): new option --map
-
-* Thu Dec 16 23:15:37 1999 CET Stefan Hornburg <racke@linuxia.de>
-
-DBIx::Easy v0.06 released
-
-* Sat Dec  4 23:19:20 1999 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_update): asks for a password if authentification fails,
-option -f/--file added
-(Easy.pm): new method passwd
-
-* Wed Dec  1 11:45:00 1999 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_dumptabdata, scripts/dbs_empty): new script(s)
-
-* Fri Nov 26 01:01:22 1999 CET Stefan Hornburg <racke@linuxia.de>
-(scripts/dbs_dumptabstruct): POD documentation added
-(scripts/dbs_update): fixed old script name in POD section
